# TextBasedGameEngine

./: CMakeLists.txt  SceneData.psgd  engine.cpp  filesystem.cpp  sceneCreation.cpp
base64/: b64.cpp  b64main.cpp
include/: filesystem.h
